--- a/express-all/cls 10 jwt-bcrypt/package.json
+++ b/express-all/cls 10 jwt-bcrypt/package.json
@@ -1,11 +1,11 @@
 {
   "name": "cls-10-jwt-bcrypt",
   "version": "1.0.0",
-  "type":"module",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"nodemon hash.js"
+    "start": "nodemon jwt.js"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2"
   }
 }
